--- a/source_v1/layouts/layout.erb
+++ b/source_v1/layouts/layout.erb
@@ -48,7 +48,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
+      <%= image_tag "{{ logo_url }}" %>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
