added rebranding using build-args

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -104,9 +104,9 @@ html, body {
     top: 21px;
     left: 88px;
     width: 57px;
-    height: 43px;
+    height: 53px;
     content: '';
-    background: url(https://app.elastic.io/img/logo.svg) no-repeat;
+    background: url({{ logo_url }}) no-repeat;
   }
 
   &>.search {
