--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,10 +17,11 @@ under the License.
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title><%= current_page.data.title || "API Documentation" %></title>
+    <link rel="shortcut icon" href="{{ favicon_url }}">
 
     <%= stylesheet_link_tag :screen, media: :screen %>
     <%= stylesheet_link_tag :print, media: :print %>
@@ -48,7 +49,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
+    
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
