--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -101,6 +101,8 @@ html, body {
 
   &:after {
     position: absolute;
+    padding-bottom: 40px;
+    padding-right: 10px;
     top: 21px;
     left: 88px;
     width: 57px;
