--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -108,7 +108,7 @@ html, body {
     width: 57px;
     height: 53px;
     content: '';
-    background: url({{ logo_url }}) no-repeat;
+    background: url({{ logo_url }}) no-repeat center/contain;
   }
 
   &>.search {
