--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,6 +20,7 @@ under the License.
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="robots" content="noindex, nofollow'>
     <title><%= current_page.data.title || "API Documentation" %></title>
     <link rel="shortcut icon" href="{{ favicon_url }}">
 
